--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,9 +1,20 @@
-<servlet>
-    <servlet-name>UsuarioServlet</servlet-name>
-    <servlet-class>com.evidencia.servlet.UsuarioServlet</servlet-class>
-</servlet>
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
+         http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
+         version="4.0">
 
-<servlet-mapping>
-    <servlet-name>UsuarioServlet</servlet-name>
-    <url-pattern>/UsuarioServlet</url-pattern>
-</servlet-mapping>
+    <display-name>BuzzCut BarberShop</display-name>
+
+    <servlet>
+        <servlet-name>creando_mi_Servlet</servlet-name>
+        <servlet-class>com.miapp.servlets.creando_mi_Servlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>mi_Servlet</servlet-name>
+        <url-pattern>/Bienvenidos</url-pattern>
+    </servlet-mapping>
+
+</web-app>
